Update TinkerPop to 3.8.2, drop Java 8 and add Java 17/21/25 support
TinkerPop 3.8 requires Java 11, so JanusGraph now compiles for (with
`--release 11`) and requires Java 11 (closes #3547). The `java-11` Maven
profile, the `janusgraph-java-11-*` distribution flavour, the `-java-11`
Docker tag suffix and `conf/jvm-8.options` are removed. janusgraph-driver
moves to Java 11 too since its TinkerPop dependencies are Java 11 bytecode.

JanusGraph is now built and tested on Java 11, 17, 21 and 25: the core
suites run on all four in CI, the Docker-backed backend/index suites on
11 and 25, CDC end-to-end on 17/21, while OLAP lanes stay on 11/17
because Spark 3.3.x does not run on Java 21+. A `jdk17-plus-tests`
profile passes TinkerPop's JDK 17 `--add-opens` set to the test JVMs,
JaCoCo is bumped to 0.8.15 for Java 25 class files, two server tests
stop mocking the (since JDK 25 sealed) java.net.InetAddress, and
hadoop-client-api/runtime are managed to 3.4.3 so the HBase client no
longer hits the removed Subject.getSubject() on Java 24+. Two CQL tests
no longer rewrite static final fields through the JDK 12+ incompatible
Field "modifiers" hack (features spy / Log4j 2 log capture instead).

Dependencies aligned with TinkerPop 3.8.2 (enforcer requireUpperBoundDeps):
netty 4.1.138.Final, commons-configuration2 2.15.1, commons-lang3 3.20.0,
commons-text 1.15.0, commons-beanutils 1.11.0, commons-logging 1.4.0,
hadoop 3.4.3 (avro 1.11.4, jetty 9.4.57.v20241219), mockito 5.23.0
(mockito-inline dropped, inline mock maker is the default), byte-buddy
1.17.7, junit 5.14.4 / junit-platform 1.14.4. JUnit 5.13 breaks
rerunner-jupiter's @ParameterizedRepeatedIfExceptionsTest, so the four
CQL simpleLogTest retries are expanded into per-parameter
@RepeatedIfExceptionsTest methods.

Code adapted to the TinkerPop 3.8 API: NoneStep -> DiscardStep,
AggregateGlobalStep/AggregateLocalStep -> AggregateStep, P.originalValue
-> P.getValue(), generic HasContainerHolder<S, E>, PropertyMapStep's
single v